--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2155,21 +2155,28 @@ ul.icons a {
 	background-size: cover;
 	background-position: center center;
 }
-#main > section.one {
+
+#main > section.main-links {
+	background-color: #f5fafa;
+}
+
+#main > section.intro {
 	color: #fff;
 	background-color: #81918E;
 	background: linear-gradient(0deg, rgba(15, 15, 15, 0.7), rgba(15, 15, 15, 0.7)), url("../../images/bummer-fullband.webp");
 }
-#main > section.two {
+
+#main > section.discography {
 	background-color: #f5fafa;
 }
-#main > section.three {
+
+#main > section.about {
 	background-color: #ecf1f1;
 }
-#main > section.four {
+#main > section.performances {
 	background-color: #e8edec;
 }
-#main > section.five {
+#main > section.contact {
 	background-color: #e5edec;
 }
 
